--- a/registration.html
+++ b/registration.html
@@ -32,8 +32,8 @@
 		<input required type="text" name="login" placeholder="Логин"><br>
 		<input required type="password" name="password" placeholder="Пароль"><br>
 		<input required type="text" name="FIO" placeholder="ФИО"><br>
-		<input required type="text" name="course" placeholder="Курс"><br>
-		<input required type="text" name="groupa" placeholder="Группа"><br>
+		<input required type="number" name="course" placeholder="Курс"><br>
+		<input required type="number" name="groupa" placeholder="Группа"><br>
 		<input required type="submit" name="submit" value="Зарегистрироваться">
 		</form>
 		</div>
